--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
     "drupal/paragraphs": "^1.2",
     "drupal/entity_reference_revisions": "^1.3",
     "drupal/diff": "^1.0",
-    "drupal/exif": "^1.2",
+    "drupal/exif_orientation": "^1",
     "drupal/field_group": "^1.0",
     "drupal/form_mode_manager": "~2",
     "drupal/geolocation": "^1.11",
