--- a/composer.json
+++ b/composer.json
@@ -50,10 +50,9 @@
     "cweagans/composer-patches": "~1.6",
     "phayes/geophp": "dev-master",
     "anthonymartin/geo-location": "^1.0",
-    "drush/drush": "~9.0",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
-    "drupal/core": "8.6.0-rc1",
+    "drupal/core": "^8",
     "drupal/radix": "3.*",
     "drupal/pathauto": "^1.0@RC",
     "drupal/admin_toolbar": "1.*",
