Remove some installer warnings about conflicting IDs

--- a/themes/custom/masradix/config/install/block.block.masradix_messages.yml
+++ b/themes/custom/masradix/config/install/block.block.masradix_messages.yml
@@ -5,7 +5,7 @@ dependencies:
     - system
   theme:
     - masradix
-id: messages
+id: masradix_messages
 theme: masradix
 region: head
 weight: -2
