--- a/themes/custom/masradix/config/install/block.block.masradix_pagetitle.yml
+++ b/themes/custom/masradix/config/install/block.block.masradix_pagetitle.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   theme:
     - masradix
-id: pagetitle
+id: masradix_pagetitle
 theme: masradix
 region: head
 weight: -3
