--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,12 @@
     "npm-asset/font-awesome": "4.7.0",
     "npm-asset/pace-js": "^0.7",
     "npm-asset/shariff": "2.0.2",
+    "npm-asset/axios": "^0.18.0",
+    "npm-asset/caman": "^4.1",
+    "npm-asset/chart.js": "^2.7",
+    "npm-asset/vue": "^2.5",
+    "npm-asset/vue-chartjs": "^3.4",
+    "npm-asset/vue-router": "^3.0",
     "bower-asset/slideout.js": "1.0.1",
     "oomphinc/composer-installers-extender": "^1.1",
     "composer/installers": "^1.2",
