Add city-parameter based geocoder plugin and field setting

--- a/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
@@ -3,6 +3,7 @@
 geolocation-nominatim-widget:
   version: VERSION
   js:
+    Control.Geocoder.NominatimCity.js: {}
     geolocation_nominatim.widget.js: {}
   dependencies:
     - geolocation_nominatim/leaflet-control-geocoder
