--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
   ],
   "require": {
     "bower-asset/bootstrap-select": "1.12.4",
-    "npm-asset/leaflet.locatecontrol": "0.62.0",
-    "npm-asset/leaflet-control-geocoder": "1.5.6",
+    "npm-asset/leaflet.locatecontrol": "^0.65",
+    "npm-asset/leaflet-control-geocoder": "^1.6",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
@@ -36,9 +36,9 @@
     "npm-asset/leaflet": "~1.0.0",
     "npm-asset/leaflet-timedimension": "^1.0",
     "npm-asset/leaflet.heat": "0.2.0",
-    "npm-asset/leaflet.markercluster": "1.2.0",
+    "npm-asset/leaflet.markercluster": "1.4.1",
     "npm-asset/leaflet-fullscreen": "1.0.2",
-    "npm-asset/leaflet-easybutton": "2.2.2",
+    "npm-asset/leaflet-easybutton": "2.3.0",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
     "npm-asset/font-awesome": "4.7.0",
     "npm-asset/pace-js": "^0.7",
