--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   "require": {
     "bower-asset/bootstrap-select": "1.12.4",
     "npm-asset/leaflet.locatecontrol": "^0.65",
-    "npm-asset/leaflet-control-geocoder": "^1.6",
+    "npm-asset/leaflet-control-geocoder": "1.5.6",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
