Make map widget reuseable for extension

--- a/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
@@ -28,6 +28,8 @@ leaflet-control-geocoder:
       /libraries/leaflet-control-geocoder/dist/Control.Geocoder.css: {}
   js:
     /libraries/leaflet-control-geocoder/dist/Control.Geocoder.js: {}
+  dependencies:
+    - geolocation_nominatim/leaflet
 
 leaflet-locatecontrol:
   js:
