--- a/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
@@ -3,10 +3,7 @@
 geolocation-nominatim-widget:
   version: VERSION
   js:
-    Control.Geocoder.NominatimCity.js: {}
     geolocation_nominatim.widget.js: {}
-  dependencies:
-    - geolocation_nominatim/leaflet-control-geocoder
 
 
 leaflet:
@@ -17,18 +14,19 @@ leaflet:
       /libraries/leaflet/dist/leaflet.css: {}
 
 leaflet-control-geocoder:
-  remote: https://github.com/perliedman/leaflet-control-geocoder
-  version: VERSION
-  license:
-    name: BSD-2-Clause
-    url: https://github.com/perliedman/leaflet-control-geocoder/blob/v1.5.1/LICENSE
-    gpl-compatible: true
   css:
     component:
       /libraries/leaflet-control-geocoder/dist/Control.Geocoder.css: {}
   js:
     /libraries/leaflet-control-geocoder/dist/Control.Geocoder.js: {}
   dependencies:
+    - geolocation_nominatim/leaflet
+
+leaflet-control-geocoder-city:
+  js:
+    Control.Geocoder.NominatimCity.js: {}
+  dependencies:
+    - geolocation_nominatim/leaflet-control-geocoder
     - geolocation_nominatim/leaflet
 
 leaflet-locatecontrol:
