--- a/config/install/views.view.management.yml
+++ b/config/install/views.view.management.yml
@@ -1302,7 +1302,7 @@ display:
           exposed: true
           expose:
             operator_id: field_organisation_op
-            label: 'Dienststelle / Amt'
+            label: 'Organisation'
             description: ''
             use_operator: false
             operator: field_organisation_op
