--- a/modules/service_request/config/install/core.entity_view_display.node.service_request.teaser.yml
+++ b/modules/service_request/config/install/core.entity_view_display.node.service_request.teaser.yml
@@ -8,7 +8,11 @@ dependencies:
     - field.field.node.service_request.field_category
     - field.field.node.service_request.field_e_mail
     - field.field.node.service_request.field_geolocation
+    - field.field.node.service_request.field_organisation
+    - field.field.node.service_request.field_pbf_ref_group
+    - field.field.node.service_request.field_pbf_ref_role
     - field.field.node.service_request.field_request_image
+    - field.field.node.service_request.field_status
     - field.field.node.service_request.field_status_notes
     - image.style.header
     - node.type.service_request
@@ -16,6 +20,7 @@ dependencies:
     module:
       - service_request
   module:
+    - field_formatter_class
     - image
     - text
     - user
@@ -31,6 +36,7 @@ content:
     settings:
       trim_length: 140
     third_party_settings: {  }
+    region: content
   field_category:
     type: entity_reference_label
     weight: 2
@@ -38,6 +44,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
+    region: content
   field_request_image:
     type: image
     weight: 0
@@ -46,13 +53,29 @@ content:
       image_style: header
       image_link: ''
     third_party_settings: {  }
-  links:
+    region: content
+  field_status:
+    type: entity_reference_label
     weight: 4
+    region: content
+    label: visually_hidden
+    settings:
+      link: false
+    third_party_settings:
+      field_formatter_class:
+        class: ''
+  links:
+    weight: 3
+    region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_address: true
   field_e_mail: true
   field_geolocation: true
+  field_organisation: true
+  field_pbf_ref_group: true
+  field_pbf_ref_role: true
   field_status_notes: true
+  langcode: true
   shariff_field: true
