Change default language to english

--- a/config/install/page_manager.page.front_page.yml
+++ b/config/install/page_manager.page.front_page.yml
@@ -1,5 +1,5 @@
 uuid: cf067d20-c15c-17492-bd1c-67d20c15cc454cebd1cb99f815407
-langcode: de
+langcode: en
 status: true
 dependencies: {  }
 id: front_page
