--- a/composer.json
+++ b/composer.json
@@ -91,13 +91,13 @@
     "drupal/hide_revision_field": "^1.1",
     "drupal/page_manager": "4.x-dev",
     "drupal/panels": "^4.2",
-    "drupal/entity_clone": "^1.0@alpha",
+    "drupal/entity_clone": "1.x-dev",
     "drupal/pbf": "^1.1",
     "drupal/quick_node_clone": "^1.5",
     "drupal/tac_lite": "^1.4",
     "drupal/views_bulk_edit": "^2",
     "drupal/views_bulk_operations": "^2",
-    "drupal/devel": "^1.2"
+    "drupal/devel": "^2"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
