Refactor map display

--- a/modules/markaspot_map/markaspot_map.libraries.yml
+++ b/modules/markaspot_map/markaspot_map.libraries.yml
@@ -70,6 +70,7 @@ map:
   dependencies:
     - core/jquery.once
     - markaspot_map/leaflet
+    - markaspot_map/leaflet-timedimension
   js:
     js/map.js: {}
   css:
