--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
     "npm-asset/dateformat": "3.0.2",
-    "npm-asset/leaflet": "~1.0.0",
+    "npm-asset/leaflet": "^1.0",
     "npm-asset/leaflet-timedimension": "^1.0",
     "npm-asset/leaflet.heat": "0.2.0",
     "npm-asset/leaflet.markercluster": "1.4.1",
