--- a/composer.json
+++ b/composer.json
@@ -33,16 +33,16 @@
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
     "npm-asset/dateformat": "3.0.2",
-    "npm-asset/leaflet": "^1.0",
-    "npm-asset/leaflet-timedimension": "^1.0",
+    "npm-asset/leaflet": "^1.4",
+    "npm-asset/leaflet-timedimension": "^1.1",
     "npm-asset/leaflet.heat": "0.2.0",
-    "npm-asset/leaflet.markercluster": "1.4.1",
+    "npm-asset/leaflet.markercluster": "^1.4",
     "npm-asset/leaflet-fullscreen": "1.0.2",
-    "npm-asset/leaflet-easybutton": "2.3.0",
+    "npm-asset/leaflet-easybutton": "2.4.0",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
     "npm-asset/font-awesome": "4.7.0",
-    "npm-asset/pace-js": "^0.7",
-    "npm-asset/shariff": "2.0.2",
+    "npm-asset/pace-js": "^1",
+    "npm-asset/shariff": "3.1.1",
     "npm-asset/axios": "^0.18.0",
     "npm-asset/caman": "^4.1",
     "npm-asset/chart.js": "^2.7",
