Fix use of FontAwesome 5 that overrides icons

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
     "npm-asset/font-awesome": "4.7.0",
     "npm-asset/pace-js": "^1",
-    "npm-asset/shariff": "3.1.1",
+    "npm-asset/shariff": "2.1.1",
     "npm-asset/axios": "^0.18.0",
     "npm-asset/caman": "^4.1",
     "npm-asset/chart.js": "^2.7",
@@ -64,7 +64,7 @@
     "drupal/admin_toolbar": "1.*",
     "drupal/restui": "^1.15",
     "drupal/token": "1.*",
-    "drupal/shariff": "dev-1.x",
+    "drupal/shariff": "^1",
     "drupal/r4032login": "dev-1.x",
     "drupal/bootstrap_layouts": "^5.0",
     "drupal/views_bootstrap": "^3.0",
