Remove shariff patch

--- a/composer.json
+++ b/composer.json
@@ -136,8 +136,6 @@
         "type:drupal-drush"
       ]
     },
-    "enable-patching": true,
-    "patches": {
-    }
+    "enable-patching": true
   }
 }
