--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,27 @@
     {
       "type": "vcs",
       "url": "https://github.com/markaspot/GeoPHP"
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "markaspot/leaflet-control-geocoder",
+        "version": "1.10.0",
+        "type": "drupal-library",
+        "dist": {
+          "url": "https://github.com/markaspot/leaflet-control-geocoder/archive/v1.10.0.zip",
+          "type": "zip"
+        },
+        "require": {
+          "composer/installers": "~1.0"
+        }
+      }
     }
   ],
   "require": {
     "bower-asset/bootstrap-select": "1.12.4",
     "npm-asset/leaflet.locatecontrol": "^0.65",
-    "npm-asset/leaflet-control-geocoder": "1.5.6",
+    "markaspot/leaflet-control-geocoder": "^1.10",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
