Fix access checks to support unpublished node map views

--- a/modules/markaspot_open311/markaspot_open311.routing.yml
+++ b/modules/markaspot_open311/markaspot_open311.routing.yml
@@ -2,6 +2,6 @@ markaspot_open311.settings:
   path: '/admin/structure/markaspot/open311/settings'
   defaults:
     _form: '\Drupal\markaspot_open311\Form\MarkaspotOpen311SettingsForm'
-    _title: 'Hello 311'
+    _title: 'Open 311'
   requirements:
     _permission: 'administer site configuration'
