--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
       "type": "package",
       "package": {
         "name": "markaspot/leaflet-control-geocoder",
-        "version": "1.10.0",
+        "version": "1.12",
         "type": "drupal-library",
         "dist": {
-          "url": "https://github.com/markaspot/leaflet-control-geocoder/archive/v1.10.0.zip",
+          "url": "https://github.com/markaspot/leaflet-control-geocoder/archive/1.12.zip",
           "type": "zip"
         },
         "require": {
@@ -43,7 +43,7 @@
   "require": {
     "bower-asset/bootstrap-select": "1.12.4",
     "npm-asset/leaflet.locatecontrol": "^0.65",
-    "markaspot/leaflet-control-geocoder": "^1.10",
+    "markaspot/leaflet-control-geocoder": "1.12",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
