--- a/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
@@ -4,7 +4,9 @@ geolocation-nominatim-widget:
   version: VERSION
   js:
     geolocation_nominatim.widget.js: {}
-
+  css:
+    theme:
+      geolocation_nominatim.css: {}
 
 leaflet:
   header: true
