Update geoPHP library source from original fork

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     {
       "type": "vcs",
-      "url": "https://github.com/markaspot/GeoPHP"
+      "url": "https://github.com/OpencachingDeutschland/geoPHP"
     },
     {
       "type": "package",
