--- a/composer.json
+++ b/composer.json
@@ -23,27 +23,11 @@
     {
       "type": "vcs",
       "url": "https://github.com/OpencachingDeutschland/geoPHP"
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "markaspot/leaflet-control-geocoder",
-        "version": "1.12",
-        "type": "drupal-library",
-        "dist": {
-          "url": "https://codeload.github.com/markaspot/leaflet-control-geocoder/zip/1.12",
-          "type": "zip"
-        },
-        "require": {
-          "composer/installers": "~1.0"
-        }
-      }
     }
   ],
   "require": {
     "bower-asset/bootstrap-select": "1.12.4",
     "npm-asset/leaflet.locatecontrol": "^0.65",
-    "markaspot/leaflet-control-geocoder": "1.12",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
@@ -54,6 +38,7 @@
     "npm-asset/leaflet.markercluster": "^1.4",
     "npm-asset/leaflet-fullscreen": "1.0.2",
     "npm-asset/leaflet-easybutton": "2.4.0",
+    "npm-asset/leaflet-control-geocoder": "^1",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
     "npm-asset/font-awesome": "4.7.0",
     "npm-asset/pace-js": "^1",
