--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }
   ],
   "require": {
-    "npm-asset/bootstrap-select": "^1",
+    "npm-asset/bootstrap-select": "1.12",
     "npm-asset/leaflet.locatecontrol": "^0.65",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
