--- a/modules/markaspot_features/markaspot_article/markaspot_article.info.yml
+++ b/modules/markaspot_features/markaspot_article/markaspot_article.info.yml
@@ -1,7 +1,7 @@
 name: Article
 description: 'Provides Article content type and related configuration. Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - comment
   - field
