--- a/modules/markaspot_features/markaspot_statement/markaspot_statement.info.yml
+++ b/modules/markaspot_features/markaspot_statement/markaspot_statement.info.yml
@@ -1,7 +1,7 @@
 name: markaspot_statement
 description: 'Provide a statement stand alone field config'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - block
   - field
