--- a/modules/markaspot_uuid/markaspot_uuid.info.yml
+++ b/modules/markaspot_uuid/markaspot_uuid.info.yml
@@ -1,6 +1,6 @@
 name: Mark-a-Spot UUID
 type: module
 description: Overriding the UUID component
-core: 8.x
+core_version_requirement: ^8 || ^9
 package: Mark-a-Spot
 
