--- a/modules/markaspot_validation/markaspot_validation.info.yml
+++ b/modules/markaspot_validation/markaspot_validation.info.yml
@@ -2,5 +2,5 @@ name: Mark-a-Spot Validation
 description: Provides some constraints and configuration for entities of the Mark-a-Spot ditribution.
 package: Mark-a-Spot
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 
