--- a/modules/markaspot_features/markaspot_comment/markaspot_comment.info.yml
+++ b/modules/markaspot_features/markaspot_comment/markaspot_comment.info.yml
@@ -1,7 +1,7 @@
 name: 'Default comments'
 description: 'Provides Default comments comment type and related configuration. Allows commenting on content'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - comment
   - field
