--- a/modules/markaspot_features/markaspot_core/markaspot_core.info.yml
+++ b/modules/markaspot_features/markaspot_core/markaspot_core.info.yml
@@ -1,7 +1,7 @@
 name: 'Mark-a-Spot Core'
 description: 'Provides core components required by other features.'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - block
   - block_content
