--- a/modules/markaspot_features/markaspot_page/markaspot_page.info.yml
+++ b/modules/markaspot_features/markaspot_page/markaspot_page.info.yml
@@ -1,7 +1,7 @@
 name: 'Basic page'
 description: 'Provides Basic page content type and related configuration. Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - field
   - node
