--- a/modules/markaspot_features/markaspot_stats/markaspot_stats.info.yml
+++ b/modules/markaspot_features/markaspot_stats/markaspot_stats.info.yml
@@ -1,7 +1,7 @@
 name: 'Mark-a-Spot Stats'
 description: 'Statistic Blocks'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - block
   - node
