--- a/modules/markaspot_features/markaspot_user/markaspot_user.info.yml
+++ b/modules/markaspot_features/markaspot_user/markaspot_user.info.yml
@@ -1,7 +1,7 @@
 name: User
 description: 'Provide User related configuration.'
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - user
 package: Mark-a-Spot
