--- a/modules/markaspot_map/markaspot_map.info.yml
+++ b/modules/markaspot_map/markaspot_map.info.yml
@@ -1,6 +1,6 @@
 name: 'Mark-a-Spot Map'
 package: Mark-a-Spot
-core: 8.x
+core_version_requirement: ^8 || ^9
 description: 'Provides a map block for a Mark-a-Spot Installation'
 type: module
 
