--- a/modules/markaspot_privacy/markaspot_privacy.info.yml
+++ b/modules/markaspot_privacy/markaspot_privacy.info.yml
@@ -1,7 +1,7 @@
 name: 'Mark-a-Spot Privacy'
 type: module
 description: 'Privacy term checkbox field and term page'
-core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Mark-a-Spot'
 dependencies:
   - default_content
