--- a/modules/markaspot_ui/markaspot_ui.info.yml
+++ b/modules/markaspot_ui/markaspot_ui.info.yml
@@ -3,6 +3,6 @@ type: module
 description: 'UI and Menubar for the Mark-a-Spot Distro'
 package: Mark-a-Spot
 
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - toolbar
