--- a/modules/service_request/service_request.info.yml
+++ b/modules/service_request/service_request.info.yml
@@ -2,7 +2,7 @@ name: Service Request Content Type
 description: Open311 Service Requests content type.
 package: Mark-a-Spot
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 
 dependencies:
   - node
