--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,6 @@
     "anthonymartin/geo-location": "^1.0",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
-    "drupal/core": "^8",
     "drupal/radix": "3.*",
     "drupal/pathauto": "^1.0@RC",
     "drupal/admin_toolbar": "2.*",
@@ -115,6 +114,15 @@
         "type:drupal-drush"
       ]
     },
-    "enable-patching": true
+    "enable-patching": true,
+    "patches": {
+      "drupal/radix": {
+        "Make D9 ready": "https://www.drupal.org/files/issues/2020-04-15/radix-9x.patch"
+      },
+      "drupal/business_rules": {
+        "Add taxonomy condition": "https://www.drupal.org/files/issues/2018-07-05/2983864-feature-request-compare-target_id-with-field.patch",
+        "Fix e-mail-from header": "https://www.drupal.org/files/issues/2020-04-28/business-rules-email-from.patch"
+      }
+    }
   }
 }
