--- a/composer.json
+++ b/composer.json
@@ -117,7 +117,7 @@
     "enable-patching": true,
     "patches": {
       "drupal/radix": {
-        "Make D9 ready": "https://www.drupal.org/files/issues/2020-04-15/radix-9x.patch"
+        "Make D9 ready": "https://www.drupal.org/files/issues/2020-06-06/radix.3.x-dev.rector.patch"
       },
       "drupal/business_rules": {
         "Add taxonomy condition": "https://www.drupal.org/files/issues/2018-07-05/2983864-feature-request-compare-target_id-with-field.patch",
@@ -125,6 +125,7 @@
       },
       "drupal/form_mode_manager": {
         "Add D9 fixes": "https://www.drupal.org/files/issues/2020-10-30/form_mode_manager-drupal-9-compatibility-3164478-6.patch"
-      }    }
+      }
+    }
   }
 }
