--- a/composer.json
+++ b/composer.json
@@ -125,6 +125,9 @@
       },
       "drupal/form_mode_manager": {
         "Add D9 fixes": "https://www.drupal.org/files/issues/2020-10-30/form_mode_manager-drupal-9-compatibility-3164478-6.patch"
+      },
+      "drupal/image_effects": {
+        "D8.8.6 -> D8.8.7 = Usupport schema version": "https://www.drupal.org/files/issues/2020-07-14/unsuported_schema_version-3146575-7.patch"
       }
     }
   }
