--- a/modules/service_request/service_request.routing.yml
+++ b/modules/service_request/service_request.routing.yml
@@ -1,14 +1,15 @@
 service_request.add:
   path: '/report'
   defaults:
-    _controller: '\Drupal\node\Controller\NodeController::add'
-    _title: 'Create Service Request'
-    node_type: 'service_request'
+    _entity_form: 'node.default'
+    _title_callback: '\Drupal\node\Controller\NodeController::addPageTitle'
   requirements:
     _node_add_access: 'node:{node_type}'
   options:
     _node_operation_route: TRUE
     parameters:
       node_type:
+        type: entity:node_type
         with_config_overrides: TRUE
+
 
