--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
     "drupal/field_formatter_class":"^1.0",
     "drupal/page_manager": "4.x-dev",
     "drupal/panels": "^4.2",
-    "drupal/pbf": "^1.3"
+    "drupal/pbf": "^1.3",
+    "drupal/inline_entity_form": "^1.0@RC"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
