Fix settings file for resubmissions module

--- a/modules/markaspot_resubmission/config/optional/markaspot_resubmission.settings.yml
+++ b/modules/markaspot_resubmission/config/optional/markaspot_resubmission.settings.yml
@@ -1,12 +1,10 @@
 tax_status: service_status
 status_resubmissive:
   5: '5'
-  13: '13'
-status_resubmissiond: null
 days:
-  60: '10'
-  2: '10'
-  61: '10'
-  39: '10'
-  59: '10'
-  40: '10'
+  3: '1'
+  1: '1'
+  2: '1'
+  4: '1'
+mailtext: 'Hello [current-user:name]!'
+interval: '172800'
