--- a/composer.json
+++ b/composer.json
@@ -121,8 +121,7 @@
         "Make Radix D9 ready": "https://gist.githubusercontent.com/markaspot/e68009bc1dffc4db3867dfe582b77871/raw/d323fdd0ae404086b00e7b4ddb198289dd1fe576/radix-d9-3-x.patch"
       },
       "drupal/business_rules": {
-        "Add taxonomy condition": "https://www.drupal.org/files/issues/2018-07-05/2983864-feature-request-compare-target_id-with-field.patch",
-        "Fix e-mail-from header": "https://www.drupal.org/files/issues/2020-04-28/business-rules-email-from.patch"
+        "Add taxonomy condition": "https://www.drupal.org/files/issues/2018-07-05/2983864-feature-request-compare-target_id-with-field.patch"
       },
       "drupal/form_mode_manager": {
         "Add D9 fixes": "https://www.drupal.org/files/issues/2020-10-30/form_mode_manager-drupal-9-compatibility-3164478-6.patch"
