--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
     }
   ],
   "require": {
-    "npm-asset/bootstrap-select": "1.12",
+    "npm-asset/bootstrap-select": "^1.13",
     "npm-asset/leaflet.locatecontrol": "^0.65",
     "npm-asset/fontawesome-iconpicker": "^1.3",
     "npm-asset/waypoints": "4.0.1",
     "npm-asset/iso8601-js-period": "0.2.0",
     "npm-asset/dateformat": "3.0.2",
-    "npm-asset/leaflet": "~1",
+    "npm-asset/leaflet": "^1",
     "npm-asset/leaflet-timedimension": "^1.1",
     "npm-asset/leaflet.heat": "0.2.0",
     "npm-asset/leaflet.markercluster": "^1.4",
