--- a/modules/markaspot_media/markaspot_media.info.yml
+++ b/modules/markaspot_media/markaspot_media.info.yml
@@ -5,6 +5,6 @@ package: Custom
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - media
+  - drupal:media
   - inline_entity_form
   - field_formatter_class
