Add leaflet edge-buffer library

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "npm-asset/leaflet-timedimension": "^1.1",
     "npm-asset/leaflet.heat": "0.2.0",
     "npm-asset/leaflet.markercluster": "^1.4",
-    "npm-asset/leaflet-fullscreen": "1.0.2",
+    "npm-asset/leaflet-fullscreen": "^1",
+    "npm-asset/leaflet-edgebuffer": "^1",
     "npm-asset/leaflet-easybutton": "2.4.0",
     "npm-asset/leaflet-control-geocoder": "^1",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
