--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,6 @@
     "anthonymartin/geo-location": "^1.0",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
-    "drupal/radix": "3.x-dev",
     "drupal/pathauto": "^1",
     "drupal/admin_toolbar": "^3",
     "drupal/advagg": "^4.1",
@@ -77,6 +76,7 @@
     "drupal/form_mode_manager": "^2",
     "drupal/geolocation": "^3",
     "drupal/maillog": "1.x-dev",
+    "drupal/media_parent_entity_link": "^1.0",
     "drupal/metatag": "^1.16",
     "drupal/services_api_key_auth": "dev-3.0.x",
     "drupal/search_api": "^1.5",
