--- a/composer.json
+++ b/composer.json
@@ -38,16 +38,13 @@
     "npm-asset/leaflet-easybutton": "2.4.0",
     "npm-asset/leaflet-control-geocoder": "^1",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
-    "npm-asset/font-awesome": "4.7.0",
-    "npm-asset/pace-js": "^1",
-    "npm-asset/shariff": "2.1.1",
+    "npm-asset/font-awesome": "^5",
     "npm-asset/axios": "^0.18.0",
     "npm-asset/caman": "^4.1",
     "npm-asset/chart.js": "^2.7",
     "npm-asset/vue": "^2.5",
     "npm-asset/vue-chartjs": "^3.4",
     "npm-asset/vue-router": "^3.0",
-    "bower-asset/bootstrap-offcanvas": "^2.5",
     "oomphinc/composer-installers-extender": "^2",
     "composer/installers": "^1.2",
     "funiq/geophp": "dev-master",
