--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
     "npm-asset/leaflet-easybutton": "2.4.0",
     "npm-asset/leaflet-control-geocoder": "^1",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
+    "npm-asset/mapbox-gl-leaflet": "^0.0.15",
+    "npm-asset/mapbox-gl": "*",
     "npm-asset/font-awesome": "^5",
     "npm-asset/axios": "^0.18.0",
     "npm-asset/caman": "^4.1",
