--- a/modules/markaspot_map/markaspot_map.libraries.yml
+++ b/modules/markaspot_map/markaspot_map.libraries.yml
@@ -52,8 +52,8 @@ waypoints:
 
 leaflet-timedimension:
   js:
-    /libraries/leaflet-timedimension/dist/leaflet.timedimension.min.js: {}
-    /libraries/iso8601-js-period/iso8601.min.js: {}
+    /libraries/iso8601-js-period/iso8601.js: {}
+    /libraries/leaflet-timedimension/dist/leaflet.timedimension.min.js: { }
   css:
     component:
       /libraries/leaflet-timedimension/dist/leaflet.timedimension.control.min.css: {}
