Switch to leaflet geosearch for mapbox widget

--- a/modules/geolocation_mapbox/geolocation_mapbox.libraries.yml
+++ b/modules/geolocation_mapbox/geolocation_mapbox.libraries.yml
@@ -29,12 +29,12 @@ font-awesome:
       /libraries/font-awesome/css/all.min.css: {}
       /libraries/font-awesome/css/v4-shims.min.css: {}
 
-leaflet-control-geocoder:
+leaflet-geosearch:
   css:
     component:
-      /libraries/leaflet-control-geocoder/dist/Control.Geocoder.css: {}
+      /libraries/leaflet-geosearch/dist/geosearch.css: {}
   js:
-    /libraries/leaflet-control-geocoder/dist/Control.Geocoder.js: {}
+    /libraries/leaflet-geosearch/dist/bundle.min.js: {}
   dependencies:
     - geolocation_mapbox/leaflet
 
