--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
     "npm-asset/leaflet-edgebuffer": "^1",
     "npm-asset/leaflet-easybutton": "2.4.0",
     "npm-asset/leaflet-control-geocoder": "^1",
+    "npm-asset/leaflet-geosearch": "^3.6",
+    "npm-asset/mapbox--geojson-rewind": "^0.5.0",
     "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
     "npm-asset/mapbox-gl-leaflet": "^0.0.15",
     "npm-asset/mapbox-gl": "*",
