--- a/modules/service_request/composer.json
+++ b/modules/service_request/composer.json
@@ -13,9 +13,7 @@
   "require": {
     "drupal/geolocation": ">=1.5",
     "drupal/default_content": "1.x-dev",
-    "drupal/color_field": "2.x-dev",
-    "drupal/field_permissions": "1.x-dev",
-    "markaspot/fa_icon_class": "^8.1",
-    "markaspot/geolocation_nominatim": "dev-8.x-1.mas"
+    "drupal/color_field": "^2",
+    "drupal/field_permissions": "^1"
   }
 }
