Add new spam validation constraint
Validates a max number of service requests within 24h per e-mail AdressSponsored by City of Munich

--- a/modules/markaspot_validation/markaspot_validation.permissions.yml
+++ b/modules/markaspot_validation/markaspot_validation.permissions.yml
@@ -1,4 +1,4 @@
 bypass mas validation:
-  title: 'Bypass Mark-a-Spot geo validation'
-  description: 'Bypass location based validation of address and double post'
+  title: 'Bypass Mark-a-Spot validation'
+  description: 'Bypass Mark-a-Spot custom validation'
   restrict access: TRUE
