Update infinite scroll module

--- a/composer.json
+++ b/composer.json
@@ -76,8 +76,7 @@
     "drupal/metatag": "^1.16",
     "drupal/services_api_key_auth": "dev-3.0.x",
     "drupal/search_api": "^1.5",
-    "drupal/views_infinite_scroll": "^1.5",
-    "drupal/better_exposed_filters": "^5.0",
+    "drupal/views_infinite_scroll": "2",
     "drupal/default_content": "2.0.x",
     "drupal/color_field": "^2.4",
     "drupal/field_permissions": "^1.1",
