--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "npm-asset/caman": "^4.1",
     "npm-asset/chart.js": "^2.7",
     "npm-asset/vue": "^2.5",
-    "npm-asset/vue-chartjs": "^3.4",
+    "npm-asset/vue-chartjs": "3.5.1",
     "npm-asset/vue-router": "^3.0",
     "oomphinc/composer-installers-extender": "^2",
     "composer/installers": "^1.2",
